# gigatype

./: .gitignore  .prettierignore  AGENTS.md  BUILD.md  README.md  flake.nix  index.html  package.json  playwright.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
.nix/: bun-lock-hash  bun.nix
docs/superpowers/plans/: 2026-07-16-gigatype-private-fork.md  2026-07-17-lowercase-repository-surface.md  2026-07-20-gigatype-magic-mic-logo.md
docs/superpowers/specs/: 2026-07-16-gigatype-private-fork-design.md  2026-07-17-lowercase-repository-surface-design.md  2026-07-20-gigatype-magic-mic-logo-design.md
nix/: hm-module.nix
scripts/: build-windows-cuda.ps1  test-build-windows-cuda.ps1  test-verify-windows-cuda.ps1  verify-windows-cuda.ps1  windows-package-helpers.ps1
src/: bindings.ts
src-tauri/: Cargo.toml  build.rs  build_support.rs  tauri.conf.json
src-tauri/cuda-resources/: THIRD_PARTY_NOTICES-CUDA.txt
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/resources/licenses/: THIRD_PARTY_NOTICES-CUDA.txt
src-tauri/src/: cli.rs  clipboard.rs  lib.rs  llm_client.rs  main.rs  overlay.rs  portable.rs  settings.rs  tray.rs
src-tauri/src/audio_toolkit/audio/: recorder.rs
src-tauri/src/commands/: audio.rs
src-tauri/src/helpers/: clamshell.rs
src-tauri/src/managers/: gguf_meta.rs  mod.rs  model.rs  model_bundle.rs  transcription.rs
src-tauri/src/shortcut/: handy_keys.rs  mod.rs  tauri_impl.rs
src-tauri/tests/: onnxruntime_license_staging.rs
src/components/: Sidebar.tsx
src/components/footer/: Footer.tsx
src/components/icons/: GigaTypeLogo.tsx  GigaTypeMark.tsx
src/components/onboarding/: AccessibilityOnboarding.tsx  ModelCard.tsx  Onboarding.tsx
src/components/settings/: AccelerationSelector.tsx  index.ts
src/components/settings/about/: AboutSettings.tsx
src/components/settings/debug/: DebugSettings.tsx  KeyboardImplementationSelector.tsx
src/components/settings/models/: ModelsSettings.tsx
src/components/ui/: Dropdown.tsx
src/content/release-notes/: 0.9.0.md
src/i18n/locales/ar/: translation.json
src/i18n/locales/bg/: translation.json
src/i18n/locales/cs/: translation.json
src/i18n/locales/de/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/fr/: translation.json
src/i18n/locales/he/: translation.json
src/i18n/locales/it/: translation.json
src/i18n/locales/ja/: translation.json
src/i18n/locales/ko/: translation.json
src/i18n/locales/ne/: translation.json
src/i18n/locales/nl/: translation.json
src/i18n/locales/pl/: translation.json
src/i18n/locales/pt/: translation.json
src/i18n/locales/ru/: translation.json
src/i18n/locales/sv/: translation.json
src/i18n/locales/tr/: translation.json
src/i18n/locales/uk/: translation.json
src/i18n/locales/vi/: translation.json
src/i18n/locales/zh/: translation.json
src/i18n/locales/zh-TW/: translation.json
src/lib/utils/: modelSource.ts
src/overlay/: RecordingOverlay.css
src/stores/: settingsStore.ts
tests/: acceleration-selector.test.tsx  dropdown-accessibility.test.tsx  gigatype-branding.test.ts  model-source.test.ts  overlay-geometry.test.ts
